--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,12 @@
 		<nav>
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="/login">Sign in</a></li>
+				{% if current_user.is_authenticated() %}
+					<li><a href="/logout">Sign out</a></li>
+				{% else %}
+					<li><a href="/login">Sign in</a></li>
+					<li><a href="/register">Register</a></li>
+				{% endif %}
 			</ul>
 		</nav>
 		<hr>
