--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-	<h1>Hello, {{ user.nickname }}</h1>
+	{% if current_user.is_authenticated() %}
+		<h1>Hello, {{ current_user.nickname }}</h1>
+	{% endif %}
+
+	{% if current_user.is_authenticated() %}
+		{% include 'newPost.html' %}
+		<hr>
+	{% endif %}
+
 	{% for post in posts %}
 	<article>
 		<h1>{{ post.author.nickname }}</h1>
